Refactor version compatibility and package existence check into separate function (VerifyCompatibleProvider).  When one of these checks fails in GetBaseURL, use only the install directory's data source as a backup in case the profile's selection is not in the current install, and don't write the backup back to the profile.  b=191954  sr=bryner  r=danm